# ai-poisoned-foss-well

./: .gitignore  AGENTS.md  README.md  index.qmd  justfile  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  robots.txt  sitemap.xml  speaker-script.md  style.css
.well-known/: llms-full.txt  llms.txt
media/: social-card-source.html
