[project]
name = "ai-poisoned-foss-well"
version = "1.0.0"
description = "A presentation about how AI is poisoning the free and open source software movement"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "open-source",
    "foss",
    "ai",
    "software-security"
]
dependencies = ["jupyter>=1.1.1", "ipykernel>=7.2.0", "matplotlib>=3.10.8"]

[tool.uv]
required-version = ">=0.11.7"

[dependency-groups]
dev = []
